@@ -465,93 +465,3 @@ async def producer(ch):
     for i in range(10):
         await c.send(i)
     await c.send(None)   # Sentinel
-
-@pytest.mark.skipif(sys.platform.startswith("win"),
-                    reason='broken on Windows')
-def test_aside_basic(kernel):
-    import os
-    os.environ['PYTHONPATH'] = os.path.dirname(__file__)
-    results = [ ]
-
-    async def consumer(ch):
-        while True:
-            try:
-                c = await ch.connect(authkey=b'peekaboo')
-                break
-            except OSError:
-                await sleep(0.1)
-
-        while True:
-            msg = await c.recv()
-            if msg is None:
-                break
-            results.append(msg)
-
-    async def main():
-        ch = Channel(('localhost', 30000))
-        t1 = await aside(producer, ch)
-        t2 = await spawn(consumer, ch)
-        await t1.join()
-        await t2.join()
-
-    kernel.run(main)
-    del os.environ['PYTHONPATH']
-    assert results == [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
-
-@pytest.mark.skipif(sys.platform.startswith("win"),
-                    reason='broken on Windows')
-def test_aside_cancel(kernel):
-    import os
-    os.environ['PYTHONPATH'] = os.path.dirname(__file__)
-    results = [ ]
-
-    async def consumer(ch, t):
-        while True:
-            try:
-                c = await ch.connect(authkey=b'peekaboo')
-                break
-            except OSError:
-                await sleep(0.1)
-        while True:
-            msg = await c.recv()
-            if msg == 5:
-                await t.cancel()
-                break
-            results.append(msg)
-
-    async def main():
-        ch = Channel(('localhost', 30000))
-        t1 = await aside(producer, ch)
-        t2 = await spawn(consumer, ch, t1)
-        with pytest.raises(TaskError):
-            await t1.join()
-        await t2.join()
-
-    kernel.run(main)
-    del os.environ['PYTHONPATH']
-    assert results == [0, 1, 2, 3, 4]
-
-
-#@pytest.mark.skipif(sys.version_info[0:2] < (3, 7), reason="contextvars needs 3.7+")
-@pytest.mark.skipif(True, reason='broken')
-def test_contextvars(kernel):
-    import contextvars
-    cvar = contextvars.ContextVar("test")
-
-    async def one():
-        cvar.set("abc")
-        assert cvar.get() == "abc"
-
-    async def two():
-        assert cvar.get(None) is None
-        cvar.set("def")
-        assert cvar.get(None) == "def"
-
-    async def main():
-        t1 = await spawn(one)
-        await t1.join()
-        t2 = await spawn(two)
-        await t2.join()
-        assert cvar.get("ghi") == "ghi"
-
-    kernel.run(main)
